--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Me</title>
-    <script src="vendor/react-with-addons.js"></script>
-    <script src="vendor/react-dom.js"></script>
-    <script src="vendor/browser.min.js"></script>
+    <script src="/vendor/react-with-addons.js"></script>
+    <script src="/vendor/react-dom.js"></script>
+    <script src="/vendor/browser.min.js"></script>
 </head>
 <body style="background-color:black;">
 <div id="me" style="margin-left:25%; margin-right:25%;"></div>
-<script type="text/babel" src="app/app.jsx"></script>
+<script type="text/babel" src="/app/app.jsx"></script>
 </body>
 </html>
